[package]
name = "Redox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "warhead"
path = "src/warhead/main.rs"

[[bin]]
name = "controler"
path = "src/controler/main.rs"

[[bin]]
name = "middleware"
path = "src/middleware/main.rs"

[dependencies]
clipboard-win = "5.4.0"
tokio = { version = "1.39.2", features = ["full"] }
#xcap = "0.0.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winnt", "processthreadsapi", "psapi", "winnls", "minwindef", "windef"] }
